--- a/composer.json
+++ b/composer.json
@@ -2,21 +2,21 @@
     "name": "hellomage/delete-invoice",
     "description": "delete invoice magento 2 admin module",
     "type": "magento2-module",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "license": [
         "OSL-3.0"
     ],
     "authors": [
         {
             "name": "HELLOMAGE",
-            "email": "info@hellomage.com",
+            "email": "jicksonkoottala@gmail.com",
             "homepage": "https://www.hellomage.com/",
             "role": "Developer"
         }
     ],
     "require": {
-        "magento/framework": ">=100.0.0",
-        "magento/module-backend": ">=100.0.0"
+        "magento/framework": "^102.0|^103.0",
+        "magento/module-backend": "102.0.*"
     },
     "keywords": [
         "magento 2",
