--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hellomage/delete-invoice",
-    "description": "delete invoice magento 2 admin module",
+    "description": "delete invoice extension for magento",
     "type": "magento2-module",
     "version": "1.0.3",
     "license": [
